--- a/demo/index.html
+++ b/demo/index.html
@@ -35,7 +35,7 @@
     <div class="wrap">
     </div>
     <script>
-        console.log(window.transferFiles)
+        console.log(window.TransferFilesPlugin)
     </script>
 </body>
 
